--- a/config/crd/bases/operator.tigera.io_logcollectors.yaml
+++ b/config/crd/bases/operator.tigera.io_logcollectors.yaml
@@ -111,7 +111,8 @@ spec:
                         type: string
                       logTypes:
                         description: LogTypes contains a list of types of logs to
-                          export to syslog.
+                          export to syslog. By default, if this field is omitted,
+                          it will be set to include all possible values.
                         items:
                           description: SyslogLogType represents the allowable log
                             types for syslog. Allowable values are AuditEE, AuditKube,
