--- a/deploy/crds/elastic/enterprisesearch-crd.yaml
+++ b/deploy/crds/elastic/enterprisesearch-crd.yaml
@@ -6,7 +6,7 @@ metadata:
     controller-gen.kubebuilder.io/version: v0.2.5
     "helm.sh/hook": "crd-install"
   creationTimestamp: null
-  name: apmservers.apm.k8s.elastic.co
+  name: enterprisesearches.enterprisesearch.k8s.elastic.co
 spec:
   additionalPrinterColumns:
     - JSONPath: .status.health
@@ -17,28 +17,28 @@ spec:
       name: nodes
       type: integer
     - JSONPath: .spec.version
-      description: APM version
+      description: Enterprise Search version
       name: version
       type: string
     - JSONPath: .metadata.creationTimestamp
       name: age
       type: date
-  group: apm.k8s.elastic.co
+  group: enterprisesearch.k8s.elastic.co
   names:
     categories:
       - elastic
-    kind: ApmServer
-    listKind: ApmServerList
-    plural: apmservers
+    kind: EnterpriseSearch
+    listKind: EnterpriseSearchList
+    plural: enterprisesearches
     shortNames:
-      - apm
-    singular: apmserver
+      - ent
+    singular: enterprisesearch
   scope: Namespaced
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
-      description: ApmServer represents an APM Server resource in a Kubernetes cluster.
+      description: EnterpriseSearch is a Kubernetes CRD to represent Enterprise Search.
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -53,18 +53,29 @@ spec:
         metadata:
           type: object
         spec:
-          description: ApmServerSpec holds the specification of an APM Server.
+          description: EnterpriseSearchSpec holds the specification of an Enterprise
+            Search resource.
           properties:
             config:
-              description: 'Config holds the APM Server configuration. See: https://www.elastic.co/guide/en/apm/server/current/configuring-howto-apm-server.html'
+              description: Config holds the Enterprise Search configuration.
+              type: object
+            configRef:
+              description: ConfigRef contains a reference to an existing Kubernetes
+                Secret holding the Enterprise Search configuration. Configuration
+                settings are merged and have precedence over settings specified in
+                `config`.
+              properties:
+                secretName:
+                  description: SecretName is the name of the secret.
+                  type: string
               type: object
             count:
-              description: Count of APM Server instances to deploy.
+              description: Count of Enterprise Search instances to deploy.
               format: int32
               type: integer
             elasticsearchRef:
-              description: ElasticsearchRef is a reference to the output Elasticsearch
-                cluster running in the same Kubernetes cluster.
+              description: ElasticsearchRef is a reference to the Elasticsearch cluster
+                running in the same Kubernetes cluster.
               properties:
                 name:
                   description: Name of the Kubernetes object.
@@ -77,8 +88,8 @@ spec:
                 - name
               type: object
             http:
-              description: HTTP holds the HTTP layer configuration for the APM Server
-                resource.
+              description: HTTP holds the HTTP layer configuration for Enterprise
+                Search resource.
               properties:
                 service:
                   description: Service defines the template for the associated Kubernetes
@@ -344,112 +355,46 @@ spec:
                   type: object
               type: object
             image:
-              description: Image is the APM Server Docker image to deploy.
+              description: Image is the Enterprise Search Docker image to deploy.
               type: string
-            kibanaRef:
-              description: KibanaRef is a reference to a Kibana instance running in
-                the same Kubernetes cluster. It allows APM agent central configuration
-                management in Kibana.
-              properties:
-                name:
-                  description: Name of the Kubernetes object.
-                  type: string
-                namespace:
-                  description: Namespace of the Kubernetes object. If empty, defaults
-                    to the current namespace.
-                  type: string
-              required:
-              - name
-              type: object
             podTemplate:
               description: PodTemplate provides customisation options (labels, annotations,
-                affinity rules, resource requests, and so on) for the APM Server pods.
+                affinity rules, resource requests, and so on) for the Enterprise Search
+                pods.
               type: object
-            secureSettings:
-              description: SecureSettings is a list of references to Kubernetes secrets
-                containing sensitive configuration options for APM Server.
-              items:
-                description: SecretSource defines a data source based on a Kubernetes
-                  Secret.
-                properties:
-                  entries:
-                    description: Entries define how to project each key-value pair
-                      in the secret to filesystem paths. If not defined, all keys
-                      will be projected to similarly named paths in the filesystem.
-                      If defined, only the specified keys will be projected to the
-                      corresponding paths.
-                    items:
-                      description: KeyToPath defines how to map a key in a Secret
-                        object to a filesystem path.
-                      properties:
-                        key:
-                          description: Key is the key contained in the secret.
-                          type: string
-                        path:
-                          description: Path is the relative file path to map the key
-                            to. Path must not be an absolute file path and must not
-                            contain any ".." components.
-                          type: string
-                      required:
-                        - key
-                      type: object
-                    type: array
-                  secretName:
-                    description: SecretName is the name of the secret.
-                    type: string
-                required:
-                  - secretName
-                type: object
-              type: array
             serviceAccountName:
               description: ServiceAccountName is used to check access from the current
                 resource to a resource (eg. Elasticsearch) in a different namespace.
                 Can only be used if ECK is enforcing RBAC on references.
               type: string
             version:
-              description: Version of the APM Server.
+              description: Version of Enterprise Search.
               type: string
-          required:
-          - version
           type: object
         status:
-          description: ApmServerStatus defines the observed state of ApmServer
+          description: EnterpriseSearchStatus defines the observed state of EnterpriseSearch
           properties:
+            associationStatus:
+              description: Association is the status of any auto-linking to Elasticsearch
+                clusters.
+              type: string
             availableNodes:
               format: int32
               type: integer
-            elasticsearchAssociationStatus:
-              description: ElasticsearchAssociationStatus is the status of any auto-linking
-                to Elasticsearch clusters.
-              type: string
             health:
-              description: ApmServerHealth expresses the status of the Apm Server
-                instances.
-              type: string
-            kibanaAssociationStatus:
-              description: KibanaAssociationStatus is the status of any auto-linking
-                to Kibana.
-              type: string
-            secretTokenSecret:
-              description: SecretTokenSecretName is the name of the Secret that contains
-                the secret token
+              description: EnterpriseSearchHealth expresses the health of the Enterprise
+                Search instances.
               type: string
             service:
-              description: ExternalService is the name of the service the agents should
-                connect to.
+              description: ExternalService is the name of the service associated to
+                the Enterprise Search Pods.
               type: string
           type: object
-  version: v1
+  version: v1beta1
   versions:
-    - name: v1
-      served: true
-      storage: true
     - name: v1beta1
       served: true
-      storage: false
-    - name: v1alpha1
-      served: false
-      storage: false
+      storage: true
 status:
   acceptedNames:
     kind: ""
