--- a/deploy/crds/elastic/kibana-crd.yaml
+++ b/deploy/crds/elastic/kibana-crd.yaml
@@ -2,6 +2,8 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
+  annotations:
+    controller-gen.kubebuilder.io/version: v0.2.5
   creationTimestamp: null
   name: kibanas.kibana.k8s.elastic.co
 spec:
@@ -204,8 +206,8 @@ spec:
                                 type: string
                               targetPort:
                                 anyOf:
-                                  - type: string
                                   - type: integer
+                                  - type: string
                                 description: 'Number or name of the port to access
                                   on the pods targeted by the service. Number must
                                   be in the range 1 to 65535. Name must be an IANA_SVC_NAME.
@@ -262,6 +264,24 @@ spec:
                                   type: integer
                               type: object
                           type: object
+                        topologyKeys:
+                          description: topologyKeys is a preference-order list of
+                            topology keys which implementations of services should
+                            use to preferentially sort endpoints when accessing this
+                            Service, it can not be used at the same time as externalTrafficPolicy=Local.
+                            Topology keys must be valid label keys and at most 16
+                            keys may be specified. Endpoints are chosen based on the
+                            first topology key with available backends. If this field
+                            is specified and all entries have no backends that match
+                            the topology of the client, the service has no backends
+                            for that client and connections should fail. The special
+                            value "*" may be used to mean "any topology". This catch-all
+                            value, if used, only makes sense as the last value in
+                            the list. If this is not specified or empty, no topology
+                            constraints will be applied.
+                          items:
+                            type: string
+                          type: array
                         type:
                           description: 'type determines how the Service is exposed.
                             Defaults to ClusterIP. Valid options are ExternalName,
@@ -329,8 +349,8 @@ spec:
                 affinity rules, resource requests, and so on) for the Kibana pods
               type: object
             secureSettings:
-              description: 'SecureSettings is a list of references to Kubernetes secrets
-                containing sensitive configuration options for Kibana. See: https://www.elastic.co/guide/en/cloud-on-k8s/current/k8s-kibana.html#k8s-kibana-secure-settings'
+              description: SecureSettings is a list of references to Kubernetes secrets
+                containing sensitive configuration options for Kibana.
               items:
                 description: SecretSource defines a data source based on a Kubernetes
                   Secret.
@@ -364,9 +384,16 @@ spec:
                   - secretName
                 type: object
               type: array
+            serviceAccountName:
+              description: ServiceAccountName is used to check access from the current
+                resource to a resource (eg. Elasticsearch) in a different namespace.
+                Can only be used if ECK is enforcing RBAC on references.
+              type: string
             version:
               description: Version of Kibana.
               type: string
+          required:
+            - version
           type: object
         status:
           description: KibanaStatus defines the observed state of Kibana
