Add dex to enterprise_versions.yml and tpl.

--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -75,3 +75,6 @@ components:
   cloud-controllers:
     image: tigera/cloud-controllers
     version: master
+  dex:
+    image: dexidp/dex
+    version: v2.25.0
