--- a/config/crd/bases/operator.tigera.io_managers.yaml
+++ b/config/crd/bases/operator.tigera.io_managers.yaml
@@ -40,8 +40,8 @@ spec:
               manager.
             properties:
               auth:
-                description: Auth defines the authentication strategy for the Calico
-                  Enterprise manager GUI.
+                description: Deprecated. Please use the Authentication CR for configuring
+                  authentication.
                 properties:
                   authority:
                     description: Authority configures the OAuth2/OIDC authority/issuer
@@ -87,6 +87,9 @@ spec:
                     - OAuth
                     type: string
                 type: object
+              state:
+                description: State provides user-readable status.
+                type: string
             type: object
         type: object
     served: true
