Add new flag to Authentication spec in order to support OKTA

--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -54,7 +54,7 @@ spec:
                       when there is no verification in the user enrollment process
                       or if they are acting as a proxy for another IdP. By default
                       those tokens are deemed invalid. To skip this check, set the
-                      value to "InsecureSkip". [Default: Verify] Default: Verify'
+                      value to "InsecureSkip". Default: Verify'
                     enum:
                     - Verify
                     - InsecureSkip
