idp -> identity provider in CRD

--- a/config/crd/bases/operator.tigera.io_authentications.yaml
+++ b/config/crd/bases/operator.tigera.io_authentications.yaml
@@ -52,9 +52,9 @@ spec:
                   emailVerification:
                     description: 'Some providers do not include the claim "email_verified"
                       when there is no verification in the user enrollment process
-                      or if they are acting as a proxy for another IdP. By default
-                      those tokens are deemed invalid. To skip this check, set the
-                      value to "InsecureSkip". Default: Verify'
+                      or if they are acting as a proxy for another identity provider.
+                      By default those tokens are deemed invalid. To skip this check,
+                      set the value to "InsecureSkip". Default: Verify'
                     enum:
                     - Verify
                     - InsecureSkip
