--- a/config/enterprise_versions.yml
+++ b/config/enterprise_versions.yml
@@ -1,39 +1,39 @@
 components:
   cnx-manager:
     image: tigera/cnx-manager
-    version: release-calient-v3.4
+    version: v3.4.0
   voltron:
     image: tigera/voltron
-    version: release-calient-v3.4
+    version: v3.4.0
   cnx-apiserver:
     image: tigera/cnx-apiserver
-    version: release-calient-v3.4
+    version: v3.4.0
   cnx-queryserver:
     image: tigera/cnx-queryserver
-    version: release-calient-v3.4
+    version: v3.4.0
   cnx-kube-controllers:
     image: tigera/kube-controllers
-    version: release-calient-v3.4
+    version: v3.4.0
   typha:
     image: tigera/typha
-    version: release-calient-v3.4
+    version: v3.4.0
   cnx-node:
     image: tigera/cnx-node
-    version: release-calient-v3.4
+    version: v3.4.0
   fluentd:
     image: tigera/fluentd
-    version: release-calient-v3.4
+    version: v3.4.0
   es-proxy:
     image: tigera/es-proxy
-    version: release-calient-v3.4
+    version: v3.4.0
   eck-kibana:
     version: 7.6.2
   dex:
     image: tigera/dex
-    version: release-calient-v3.4
+    version: v3.4.0
   kibana:
     image: tigera/kibana
-    version: release-calient-v3.4
+    version: v3.4.0
   elasticsearch-operator:
     registry: docker.elastic.co
     image: eck/eck-operator
@@ -42,39 +42,39 @@ components:
     version: 7.6.2
   elasticsearch:
     image: tigera/elasticsearch
-    version: release-calient-v3.4
+    version: v3.4.0
   elastic-tsee-installer:
     image: tigera/intrusion-detection-job-installer
-    version: release-calient-v3.4
+    version: v3.4.0
   es-curator:
     image: tigera/es-curator
-    version: release-calient-v3.4
+    version: v3.4.0
   intrusion-detection-controller:
     image: tigera/intrusion-detection-controller
-    version: release-calient-v3.4
+    version: v3.4.0
   compliance-controller:
     image: tigera/compliance-controller
-    version: release-calient-v3.4
+    version: v3.4.0
   compliance-reporter:
     image: tigera/compliance-reporter
-    version: release-calient-v3.4
+    version: v3.4.0
   compliance-snapshotter:
     image: tigera/compliance-snapshotter
-    version: release-calient-v3.4
+    version: v3.4.0
   compliance-server:
     image: tigera/compliance-server
-    version: release-calient-v3.4
+    version: v3.4.0
   compliance-benchmarker:
     image: tigera/compliance-benchmarker
-    version: release-calient-v3.4
+    version: v3.4.0
   # Below components are all maintained by 3rd parties and thus specify a 'registry' to indicate
   # to the docs & manifest tooling not to default to the tigera registry.
   guardian:
     image: tigera/guardian
-    version: release-calient-v3.4
+    version: v3.4.0
   tigera-cni:
     image: tigera/cni
-    version: release-calient-v3.4
+    version: v3.4.0
   cloud-controllers:
     image: tigera/cloud-controllers
-    version: release-calient-v3.4
+    version: v3.4.0
