--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -1,11 +1,11 @@
 components:
   typha:
-    version: v3.16.4
+    version: release-v3.17
   calico/node:
-    version: v3.16.4
+    version: release-v3.17
   calico/cni:
-    version: v3.16.4
+    version: release-v3.17
   calico/kube-controllers:
-    version: v3.16.4
+    version: release-v3.17
   flexvol:
-    version: v3.16.4
+    version: release-v3.17
