--- a/config/crd/bases/operator.tigera.io_installations.yaml
+++ b/config/crd/bases/operator.tigera.io_installations.yaml
@@ -397,8 +397,8 @@ spec:
               installation.
             properties:
               computed:
-                description: InstallationSpec defines configuration for a Calico or
-                  Calico Enterprise installation.
+                description: Computed is the final installation including overlaid
+                  resources.
                 properties:
                   calicoNetwork:
                     description: CalicoNetwork specifies networking configuration
@@ -759,6 +759,19 @@ spec:
                     - TigeraSecureEnterprise
                     type: string
                 type: object
+              mtu:
+                description: MTU is the most recently observed value for pod network
+                  MTU. This may be an explicitly configured value, or based on Calico's
+                  native auto-detetion.
+                format: int32
+                type: integer
+              variant:
+                description: Variant is the most recently observed installed variant
+                  - one of Calico or TigeraSecureEnterprise
+                enum:
+                - Calico
+                - TigeraSecureEnterprise
+                type: string
             type: object
         type: object
     served: true
