Add Certificate Management

--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -9,3 +9,6 @@ components:
     version: master
   flexvol:
     version: master
+  rdtigera/init-container:
+    image: rdtigera/init-container
+    version: master
