--- a/config/calico_versions.yml
+++ b/config/calico_versions.yml
@@ -10,6 +10,5 @@ components:
     version: master
   flexvol:
     version: master
-  rdtigera/init-container:
-    image: rdtigera/init-container
+  calico/key-cert-provisioner:
     version: master
